--- a/src/wav/sequencer.html
+++ b/src/wav/sequencer.html
@@ -4,39 +4,121 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notification Sequencer</title>
+  <link rel="stylesheet" href="theme.css">
   <style>
-    :root { --primary: #6c5ce7; --danger: #ff7675; --bg: #dfe6e9; --card: #ffffff; }
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background: var(--bg); color: #2d3436; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; }
-
-    .container { background: var(--card); padding: 2rem; border-radius: 16px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); width: 100%; max-width: 450px; }
-    h1 { margin-top: 0; font-size: 1.4rem; text-align: center; margin-bottom: 1.5rem; color: var(--primary); }
-
+    /* Page-specific styles */
     /* Global Controls */
-    .global-controls { background: #f1f2f6; padding: 15px; border-radius: 8px; margin-bottom: 20px; }
-    .control-row { display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px; }
-    .control-row label { font-size: 0.85rem; font-weight: 600; width: 80px; }
-    .control-row input[type=range] { flex: 1; margin: 0 10px; }
-    .val-display { font-family: monospace; font-size: 0.85rem; width: 50px; text-align: right; color: var(--primary); }
+    .global-controls {
+      background: #f1f2f6;
+      padding: 15px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+
+    .control-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 10px;
+    }
+
+    .control-row label {
+      font-size: 0.85rem;
+      font-weight: 600;
+      width: 80px;
+    }
+
+    .control-row input[type=range] {
+      flex: 1;
+      margin: 0 10px;
+    }
+
+    .val-display {
+      width: 50px;
+      text-align: right;
+    }
 
     /* Sequencer List */
-    .sequence-list { margin-bottom: 20px; max-height: 250px; overflow-y: auto; }
-    .tone-row { display: flex; align-items: center; margin-bottom: 8px; animation: slideIn 0.2s ease-out; }
-    .tone-row span { font-size: 0.8rem; width: 30px; color: #b2bec3; font-weight: bold; }
-    .tone-row input { flex: 1; padding: 8px; border: 1px solid #dfe6e9; border-radius: 6px; font-size: 0.9rem; width: 60px; }
-    .tone-row button { margin-left: 10px; background: transparent; color: var(--danger); border: 1px solid var(--danger); padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 0.8rem; }
-    .tone-row button:hover { background: var(--danger); color: white; }
+    .sequence-list {
+      margin-bottom: 20px;
+      max-height: 250px;
+      overflow-y: auto;
+    }
+
+    .tone-row {
+      display: flex;
+      align-items: center;
+      margin-bottom: 8px;
+      animation: slideIn 0.2s ease-out;
+    }
+
+    .tone-row span {
+      font-size: 0.8rem;
+      width: 30px;
+      color: #b2bec3;
+      font-weight: bold;
+    }
+
+    .tone-row input {
+      flex: 1;
+      padding: 8px;
+      border: 1px solid #dfe6e9;
+      border-radius: 6px;
+      font-size: 0.9rem;
+      width: 60px;
+    }
+
+    .tone-row button {
+      margin-left: 10px;
+      background: transparent;
+      color: var(--danger);
+      border: 1px solid var(--danger);
+      padding: 4px 8px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 0.8rem;
+    }
+
+    .tone-row button:hover {
+      background: var(--danger);
+      color: white;
+    }
 
     /* Buttons */
-    .action-area { display: grid; gap: 10px; }
-    .add-btn { width: 100%; padding: 10px; background: #fff; border: 2px dashed #b2bec3; color: #636e72; border-radius: 8px; cursor: pointer; font-weight: 600; }
-    .add-btn:hover { border-color: var(--primary); color: var(--primary); background: #f8f9fa; }
+    .action-area {
+      display: grid;
+      gap: 10px;
+    }
 
-    .main-btns { display: flex; gap: 10px; margin-top: 15px; }
-    .btn-primary { flex: 1; padding: 12px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; background: var(--primary); color: white; box-shadow: 0 4px 6px rgba(108, 92, 231, 0.2); }
-    .btn-primary:hover { transform: translateY(-1px); box-shadow: 0 6px 8px rgba(108, 92, 231, 0.3); }
-    .btn-secondary { background: #2d3436; }
+    .add-btn {
+      width: 100%;
+      padding: 10px;
+      background: #fff;
+      border: 2px dashed #b2bec3;
+      color: #636e72;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+    }
 
-    @keyframes slideIn { from { opacity: 0; transform: translateX(-10px); } to { opacity: 1; transform: translateX(0); } }
+    .add-btn:hover {
+      border-color: var(--primary);
+      color: var(--primary);
+      background: #f8f9fa;
+    }
+
+    /* Button row layout moved to theme.css for consistency */
+
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateX(-10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
   </style>
 </head>
 <body>
@@ -82,22 +164,24 @@
 
   const els = {
     container: document.getElementById('sequenceContainer'),
-    speed: document.getElementById('speed'),
-    baseFreq: document.getElementById('baseFreq'),
-    decay: document.getElementById('decay'),
-    addBtn: document.getElementById('addToneBtn'),
-    playBtn: document.getElementById('playBtn'),
-    dlBtn: document.getElementById('downloadBtn'),
+    speed:     document.getElementById('speed'),
+    baseFreq:  document.getElementById('baseFreq'),
+    decay:     document.getElementById('decay'),
+    addBtn:    document.getElementById('addToneBtn'),
+    playBtn:   document.getElementById('playBtn'),
+    dlBtn:     document.getElementById('downloadBtn'),
     // Displays
     dSpeed: document.getElementById('speedVal'),
-    dFreq: document.getElementById('freqVal'),
+    dFreq:  document.getElementById('freqVal'),
     dDecay: document.getElementById('decayVal')
   };
 
   // --- RENDER UI ---
-  function renderRows() {
+  function renderRows()
+  {
     els.container.innerHTML = '';
-    sequence.forEach((multiplier, index) => {
+    sequence.forEach((multiplier, index) =>
+    {
       const row = document.createElement('div');
       row.className = 'tone-row';
 
@@ -115,7 +199,10 @@
       delBtn.onclick = () => removeTone(index);
 
       // Disable delete if only 1 tone left
-      if (sequence.length <= 1) delBtn.disabled = true;
+      if(sequence.length <= 1)
+      {
+        delBtn.disabled = true;
+      }
 
       row.appendChild(label);
       row.appendChild(input);
@@ -125,39 +212,45 @@
   }
 
   // --- ACTIONS ---
-  function addTone() {
+  function addTone()
+  {
     // Determine smart default: duplicate last tone or 1.0
     const last = sequence[sequence.length - 1] || 1.0;
     sequence.push(last);
     renderRows();
   }
 
-  function removeTone(index) {
-    if (sequence.length > 1) {
+  function removeTone(index)
+  {
+    if(sequence.length > 1)
+    {
       sequence.splice(index, 1);
       renderRows();
     }
   }
 
   // Update Global Display Labels
-  const updateLabels = () => {
+  const updateLabels = () =>
+  {
     els.dSpeed.innerText = els.speed.value + 'ms';
     els.dFreq.innerText = els.baseFreq.value + 'Hz';
     const decayMap = ['Zip', 'Tight', 'Med', 'Long', 'Ring'];
-    els.dDecay.innerText = decayMap[parseInt(els.decay.value)-1];
-  }
+    els.dDecay.innerText = decayMap[parseInt(els.decay.value) - 1];
+  };
 
   [els.speed, els.baseFreq, els.decay].forEach(el => el.addEventListener('input', updateLabels));
 
   // --- AUDIO ENGINE ---
-  function runAudioSequence(ctx, destination, startTime) {
+  function runAudioSequence(ctx, destination, startTime)
+  {
     const baseFreq = parseInt(els.baseFreq.value);
     const speedSeconds = parseInt(els.speed.value) / 1000;
     const decaySetting = parseInt(els.decay.value) * 0.1; // Scale 0.1 to 0.5
 
     let currentTime = startTime;
 
-    sequence.forEach(multiplier => {
+    sequence.forEach(multiplier =>
+    {
       const osc = ctx.createOscillator();
       const gain = ctx.createGain();
 
@@ -185,26 +278,30 @@
   // --- PLAYBACK HANDLERS ---
   els.addBtn.addEventListener('click', addTone);
 
-  els.playBtn.addEventListener('click', () => {
+  els.playBtn.addEventListener('click', () =>
+  {
     const AudioContext = window.AudioContext || window.webkitAudioContext;
     const ctx = new AudioContext();
     runAudioSequence(ctx, ctx.destination, ctx.currentTime);
   });
 
-  els.dlBtn.addEventListener('click', async () => {
+  els.dlBtn.addEventListener('click', async () =>
+  {
     const originalText = els.dlBtn.innerText;
-    els.dlBtn.innerText = "...";
+    els.dlBtn.innerText = '...';
 
-    // Calculate duration needed based on sequence length + decay
-    const duration = (sequence.length * (parseInt(els.speed.value)/1000)) + 1.0;
+    const duration = (sequence.length * (parseInt(els.speed.value) / 1000)) + 1.0;
     const sampleRate = 44100;
     const ctx = new OfflineAudioContext(1, sampleRate * duration, sampleRate);
 
-    runAudioSequence(ctx, ctx.destination, 0.1); // 0.1s padding start
+    runAudioSequence(ctx, ctx.destination, 0.1);
 
     const renderedBuffer = await ctx.startRendering();
-    const wavBytes = bufferToWave(renderedBuffer, 0.0, duration);
-    const blob = new Blob([wavBytes], { type: 'audio/wav' });
+
+    // UPDATED CALL: No longer need to pass '0.0' or 'duration'
+    const wavBytes = bufferToWave(renderedBuffer);
+
+    const blob = new Blob([wavBytes], {type: 'audio/wav'});
 
     const url = URL.createObjectURL(blob);
     const a = document.createElement('a');
@@ -217,32 +314,71 @@
     els.dlBtn.innerText = originalText;
   });
 
-  // --- WAV HELPER ---
-  function bufferToWave(abuffer, offset, len) {
+  // --- WAV HELPER (FIXED) ---
+  function bufferToWave(abuffer)
+  {
     let numOfChan = abuffer.numberOfChannels,
-      length = len * abuffer.sampleRate * numOfChan * 2 + 44,
+      // Calculate length based on the buffer's actual sample count
+      length = abuffer.length * numOfChan * 2 + 44,
       buffer = new ArrayBuffer(length),
       view = new DataView(buffer),
-      channels = [], i, sample, pos = 0;
+      channels = [], i, sample,
+      offset = 0,
+      pos = 0;
 
-    setUint32(0x46464952); setUint32(length - 8); setUint32(0x45564157);
-    setUint32(0x20746d66); setUint32(16); setUint16(1); setUint16(numOfChan);
-    setUint32(abuffer.sampleRate); setUint32(abuffer.sampleRate * 2 * numOfChan);
-    setUint16(numOfChan * 2); setUint16(16); setUint32(0x61746164); setUint32(length - pos - 4);
+    // Write WAVE Header
+    setUint32(0x46464952);                         // "RIFF"
+    setUint32(length - 8);                         // file length - 8
+    setUint32(0x45564157);                         // "WAVE"
 
-    for(i=0; i<abuffer.numberOfChannels; i++) channels.push(abuffer.getChannelData(i));
+    setUint32(0x20746d66);                         // "fmt " chunk
+    setUint32(16);                                 // length = 16
+    setUint16(1);                                  // PCM (uncompressed)
+    setUint16(numOfChan);
+    setUint32(abuffer.sampleRate);
+    setUint32(abuffer.sampleRate * 2 * numOfChan); // avg. bytes/sec
+    setUint16(numOfChan * 2);                      // block-align
+    setUint16(16);                                 // 16-bit
 
-    while(pos < length) {
-      for(i=0; i<numOfChan; i++) {
-        sample = Math.max(-1, Math.min(1, channels[i][offset]));
-        sample = (0.5 + sample < 0 ? sample * 32768 : sample * 32767)|0;
-        view.setInt16(pos, sample, true); pos += 2;
+    setUint32(0x61746164);                         // "data" - chunk
+    setUint32(length - pos - 4);                   // chunk length
+
+    // Get Channel Data
+    for(i = 0; i < abuffer.numberOfChannels; i++)
+    {
+      channels.push(abuffer.getChannelData(i));
+    }
+
+    // Write Interleaved Data
+    while(pos < length)
+    {
+      for(i = 0; i < numOfChan; i++)
+      {
+        // SAFEGUARD: Ensure we don't read past the end of the array
+        // If data exists use it, otherwise use 0 (silence)
+        let sampleVal = channels[i][offset] ? channels[i][offset] : 0;
+
+        sample = Math.max(-1, Math.min(1, sampleVal));
+        sample = (0.5 + sample < 0 ? sample * 32768 : sample * 32767) | 0;
+        view.setInt16(pos, sample, true);
+        pos += 2;
       }
       offset++;
     }
+
     return buffer;
-    function setUint16(data) { view.setUint16(pos, data, true); pos += 2; }
-    function setUint32(data) { view.setUint32(pos, data, true); pos += 4; }
+
+    function setUint16(data)
+    {
+      view.setUint16(pos, data, true);
+      pos += 2;
+    }
+
+    function setUint32(data)
+    {
+      view.setUint32(pos, data, true);
+      pos += 4;
+    }
   }
 
   // Init
