--- a/src/wav/sequencer.html
+++ b/src/wav/sequencer.html
@@ -6,138 +6,7 @@
   <title>Advanced Sequencer</title>
   <link rel="stylesheet" href="theme.css">
   <style>
-    /* VISUALIZER */
-    canvas {
-      width: 100%;
-      height: 80px;
-      background: #2d3436;
-      border-radius: 6px;
-      margin-bottom: 20px;
-      border: 1px solid var(--border);
-    }
-
-    /* CONTROLS */
-    .global-controls {
-      background: #f1f2f6;
-      padding: 15px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-    }
-
-    .control-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 12px;
-    }
-
-    .control-row label {
-      font-size: 0.8rem;
-      font-weight: 700;
-      width: 70px;
-    }
-
-    .control-row input[type=range] {
-      flex: 1;
-      margin: 0 10px;
-      cursor: pointer;
-    }
-
-    /* Granular numeric inputs */
-    .num-input {
-      width: 60px;
-      padding: 4px;
-      border: 1px solid var(--border);
-      border-radius: 4px;
-      text-align: right;
-      font-family: monospace;
-    }
-
-    select.num-input {
-      width: 80px;
-    }
-
-    /* SEQUENCER LIST */
-    .sequence-list {
-      margin-bottom: 20px;
-      max-height: 300px;
-      overflow-y: auto;
-      border: 1px solid #eee;
-      border-radius: 6px;
-      padding: 5px;
-    }
-
-    .tone-row {
-      display: flex;
-      align-items: center;
-      padding: 8px;
-      border-bottom: 1px solid #f1f2f6;
-      transition: background 0.1s;
-      border-radius: 4px;
-    }
-
-    /* The Timeline Highlight Class */
-    .tone-row.is-playing {
-      background-color: var(--playing);
-      border-left: 4px solid #00b894;
-      font-weight: bold;
-    }
-
-    .tone-row span {
-      font-size: 0.8rem;
-      width: 30px;
-      color: #b2bec3;
-      font-weight: bold;
-    }
-
-    .tone-row input {
-      flex: 1;
-      padding: 8px;
-      border: 1px solid #dfe6e9;
-      border-radius: 6px;
-      font-size: 0.9rem;
-      margin-right: 10px;
-    }
-
-    .tone-row button {
-      background: transparent;
-      color: var(--danger);
-      border: 1px solid var(--danger);
-      padding: 4px 8px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 0.8rem;
-    }
-
-    .tone-row button:hover {
-      background: var(--danger);
-      color: white;
-    }
-
-    /* ACTION AREA */
-    .action-area {
-      display: grid;
-      gap: 10px;
-    }
-
-    .add-btn {
-      width: 100%;
-      padding: 10px;
-      background: #fff;
-      border: 2px dashed #b2bec3;
-      color: #636e72;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
-    }
-
-    .add-btn:hover {
-      border-color: var(--primary);
-      color: var(--primary);
-      background: #f8f9fa;
-    }
-
-    /* Button row layout moved to theme.css for consistency */
+    /* Shared styles moved to theme.css. Page-specific animations below. */
 
     @keyframes slideIn {
       from {
@@ -156,7 +25,7 @@
 <div class="container">
   <h1>Tone Sequencer</h1>
 
-  <canvas id="visualizer" width="500" height="100"></canvas>
+  <canvas id="visualizer" class="viz-canvas" width="500" height="100"></canvas>
 
   <div class="global-controls">
     <div class="control-row">
