Rename sequencer title

--- a/src/wav/sequencer.html
+++ b/src/wav/sequencer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Collaborative Sequencer</title>
+  <title>Advanced Sequencer</title>
   <link rel="stylesheet" href="theme.css">
   <style>
     /* Cursor & Avatar Styles */
